# nfl_mcp

./: .dockerignore  .gitignore  .gitlab-ci.yml  =5.9.0  AGENT.md  AI_LLM_GUIDE.md  API_DOCS.md  API_REFERENCE.md  API_ROBUSTNESS.md  CACHING_STRATEGY.md  CHANGELOG.md  CODEBASE_REVIEW_SUMMARY.md  CONFIGURATION.md  CONTRIBUTING.md  DATABASE_OPTIMIZATION.md  DATA_AVAILABILITY_TIMELINE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUCCESS_LOG_ANALYSIS.md  Dockerfile  ESPN_INJURY_DEBUG_NEXT_STEPS.md  FANTASY_INTELLIGENCE_EXAMPLES.md  FASTMCP_3_UPGRADE.md  FastMCP-documentation.txt  IMPLEMENTATION_SUMMARY.md  INJURY_API_ZERO_RECORDS_ANALYSIS.md  ISSUES_RESOLVED.md  ISSUE_RESOLUTION_SUMMARY.md  LOGGING_CONFIG.md  LOGGING_GUIDE.md  MONITORING.md  OPPONENT_BUG_CRITICAL.md  OPPONENT_FIX_COMPLETE.md  PRACTICE_STATUS_FIX.md  PRACTICE_STATUS_QUICKREF.md  PREFETCH_TEST_SUMMARY.md  QUICKSTART_CACHING.md  QUICK_STATUS.md  README.md  REVIEW_SUMMARY.md  RZ_TOUCHES_STRATEGY.md  (+30 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: agent-evals.yml  ci.yml  contracts.yml  evals.yml  tests.yml
docs/: COACHING_DATA_RESEARCH.md  DRAFT_DAY.md
evals/: README.md  __init__.py
evals/agent/: __init__.py  run.py  scenarios.py  tools.py
evals/backtest/: __init__.py  backtest.py  data.py  metrics.py
evals/contracts/: __init__.py  checks.py
evals/live/: __init__.py  draft_watch.py  validate_draft.py
examples/: trade_analyzer_examples.py
nfl_mcp/: __init__.py  athlete_tools.py  cbs_fantasy_tools.py  coaching_tools.py  config.py  config_manager.py  database.py  draft_tools.py  errors.py  faab_tools.py  health.py  injury_service.py  lineup_optimizer_tools.py  logging_config.py  matchup_tools.py  metrics.py  middleware.py  monitoring.py  nfl_tools.py  opponent_analysis_tools.py  param_validator.py  player_values.py  playoff_tools.py  projections.py  response_validation.py  retry_demo.py  retry_utils.py  server.py  server_old.py  sleeper_tools.py  tool_registry.py  tool_registry_old.py  trade_analyzer_tools.py  vegas_tools.py  waiver_tools.py  web_tools.py
tests/: __init__.py  test_agent_scenarios.py  test_athlete_tools.py  test_athletes.py  test_cbs_fantasy_tools.py  test_coaching_tools.py  test_coaching_tools_comprehensive.py  test_comprehensive_tool_registry.py  test_config_manager.py  test_database.py  test_database_optimization.py  test_draft_tools.py  test_enrichment.py  test_errors.py  test_eval_contracts.py  test_eval_metrics.py  test_faab_tools.py  test_fantasy_context.py  test_feature_flag_league_leaders.py  test_health.py  test_injury_service.py  test_league_leaders.py  test_league_leaders_multi.py  test_lineup_optimizer.py  test_lineup_optimizer_tools.py  test_matchup_tools.py  test_metrics.py  test_monitoring.py  test_new_apis.py  test_nfl_tools.py  test_opponent_analysis.py  test_opponent_analysis_tools.py  test_opponent_enrichment.py  test_opponent_prefetch.py  test_param_validator.py  test_player_values.py  test_playoff_tools.py  test_practice_status.py  test_practice_status_integration.py  test_projections.py  (+21 more)
