[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl_mcp"
version = "0.5.16"
description = "NFL MCP Server - Fantasy Football Analysis via Model Context Protocol"
authors = [{name = "NFL MCP Team", email = "nfl@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.4.4",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "aiosqlite>=0.22.1",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/gtonic/nfl_mcp"
Repository = "https://github.com/gtonic/nfl_mcp"
Issues = "https://github.com/gtonic/nfl_mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nfl_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
addopts = ["--strict-markers", "--strict-config", "-v"]

[tool.coverage.run]
source = ["nfl_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]